@@ -388,80 +388,6 @@ NegOpExp:
   super: Exp
   attributes: [ { operand: { type: 'Exp*', desc: Operand of the negation operator } } ]
 
-OpExp:
-  super: BinaryExp
-  inline:
-    header prologue: '# include "libport/assert.hh"'
-    header inside: |2
-
-        public:
-          /// Operator qualifier.
-          enum type
-            {
-              // Arithmetics.
-              add,  ///< "+"
-              sub,  ///< "-"
-              mul,  ///< "*"
-              div,  ///< "/"
-              exp,  ///< "^"
-              mod,  ///< "%"
-
-              // Logics.
-              land, ///< "&&"
-              lor,  ///< "||"
-
-              // Comparison.
-              equ,  ///< "=="
-              req,  ///< "~="
-              neq,  ///< "!="
-              lth,  ///< "<"
-              leq,  ///< "<="
-              gth,  ///< ">"
-              geq,  ///< ">="
-            };
-
-          /// Pretty printing the operator.
-          const char* as_string (OpExp::type t) const;
-
-    header after: |2
-      std::ostream& operator<< (std::ostream&o, OpExp::type t);
-
-    inline inside: |2
-
-        inline
-        std::ostream&
-        operator<< (std::ostream&o, OpExp::type t)
-        {
-          switch (t)
-          {
-      # define CASE(From, To) case OpExp::From: return o << To; break
-            CASE (add, "+");
-            CASE (sub, "-");
-            CASE (mul, "*");
-            CASE (div, "/");
-            CASE (exp, "^");
-            CASE (mod, "%");
-            CASE (land,"&&");
-            CASE (lor, "||");
-            CASE (equ, "==");
-            CASE (req, "~=");
-            CASE (neq, "!=");
-            CASE (lth, "<");
-            CASE (leq, "<=");
-            CASE (gth, ">");
-            CASE (geq, ">=");
-      # undef CASE
-          }
-          pabort("unreachable");
-        }
-
-  attributes:
-    - oper: { type: OpExp::type, access: r, desc: Operator }
-  printer:
-    - ~lhs
-    - $oper
-    - ~rhs
-
 CallExp:
   super: Exp
   attributes:
@@ -487,6 +413,7 @@ CallExp:
     - '"("'
     - libport::separate (n.args_get (), libport::make_pair (',', libport::iendl));
     - '")"'
+
 ArrayExp:
   super: Exp
   attributes:
