@@ -1,5 +1,15 @@
 2007-07-13  Akim Demaille  <demaille@gostai.com>
 
+	Remove OpExp
+	* src/ast/ast.yml (OpExp):
+	Remove, handled by CallExp now.
+	* src/object/atom.hxx, src/object/object.cc,
+	* src/runner/runner.cc:
+	Space changes.
+	Use `=' to report slots.
+
+2007-07-13  Akim Demaille  <demaille@gostai.com>
+
 	Runner::CallExp
 	* src/runner/runner.cc (CallExp): Actually call the primitive.
 
